--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,10 @@ nav ul li {
 
 nav ul li a {
     color: #A6A6A6;
+    transition-duration:0.5s;
 }
 
-nav ul li a:hover {
+nav ul li a:hover , .active{
     color: #000000;
 }
 
@@ -87,9 +88,7 @@ nav ul li a:hover {
 .banner {
     display: flex;
     align-items: center;
-    margin-top: 130px;
     align-items: center;
-    /* height: 100vh; */
     justify-content: space-between;
 
 }
@@ -127,11 +126,13 @@ nav ul li a:hover {
 .banner .right img {
     width: 100%;
 }
-.btns{
+
+.btns {
     display: flex;
     align-items: center;
     gap: 40px;
 }
+
 .btn-1 {
     background: #54BD95;
     border-radius: 40px;
@@ -141,6 +142,7 @@ nav ul li a:hover {
     font-weight: 500;
     font-size: 18px;
 }
+
 .btn-2 {
     color: #191A15;
     background-color: transparent;
@@ -151,7 +153,8 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
 }
-.amount-bg{
+
+.amount-bg {
     padding: 14px 18px;
     background-color: #FFFFFF;
     border-radius: 10px;
@@ -161,12 +164,14 @@ nav ul li a:hover {
     left: -15%;
     top: 40px;
 }
-.amount{  
+
+.amount {
     display: flex;
     justify-content: space-between;
-    align-items: center;  
+    align-items: center;
 }
-.amount button{
+
+.amount button {
     background: #54BD95;
     border-radius: 40px;
     padding: 5px 16px;
@@ -175,28 +180,579 @@ nav ul li a:hover {
     color: #FFFFFF;
     border: none;
 }
-.amount p{
+
+.amount p {
     font-size: 12px;
     color: #A9A7B6;
     margin-bottom: 8px;
 }
-.amount .p-2{
+
+.amount .p-2 {
     font-size: 16px;
     color: #000000;
     font-weight: 500;
 }
-.line{
+
+.line {
     width: 100%;
     height: 1px;
     background-color: #EEEEEE;
 }
-.income-bg{
+
+.income-bg {
     padding: 12px 13px;
     background-color: #FFFFFF;
     border-radius: 10px;
     width: 100%;
-    max-width:138px;
+    max-width: 138px;
     position: absolute;
     left: -8%;
     bottom: 80px;
+}
+
+/* section 1 css   */
+
+.section-1 {
+    text-align: center;
+}
+
+.section-1 h2 {
+    font-weight: 700;
+    font-size: 40px;
+    margin-bottom: 60px;
+    color: #191A15;
+}
+
+.company-logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 11;
+}
+
+/* section 2 css   */
+
+
+.section-2 {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.section-2 .left {
+    flex-basis: 60%;
+}
+
+.section-2 .right {
+    flex-basis: 40%;
+}
+
+.section-2 h2 {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.section-2 p {
+    color: #A6A6A6;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    max-width: 640px;
+}
+
+.m-bt {
+    margin-bottom: 73px;
+}
+
+.rating-base {
+    display: flex;
+    gap: 80px;
+}
+
+.rating img,
+.rating h3 {
+    margin-bottom: 18px;
+}
+
+.publish {
+    display: flex;
+    gap: 36px;
+    margin-bottom: 30px;
+}
+
+.publish-content svg {
+    width: 30px;
+    height: 30px;
+}
+
+.publish-content h4 {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.publish-content p {
+    max-width: 428px;
+}
+
+
+/* section 3 css   */
+
+.section-3-top {
+    display: flex;
+    gap: 113px;
+    margin-bottom: 73px;
+    align-items: center;
+}
+
+.section-3-top .title {
+    max-width: 331px;
+}
+
+.title h2 {
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 60px;
+}
+
+.section-3-top .detail {
+    max-width: 461px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #A6A6A6;
+    line-height: 30px;
+}
+
+.get button {
+    padding: 18px 31px;
+    color: #FFFFFF;
+    border-radius: 70px;
+    background-color: #54BD95;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.section-3-main {
+    display: flex;
+    gap: 44px;
+}
+
+.col-3 img,
+.col-3 h3 {
+    margin-bottom: 30px;
+}
+
+.col-3 h3 {
+    font-size: 30px;
+    color: #191A15;
+}
+
+.col-3 p {
+    font-size: 18px;
+    max-width: 340px;
+}
+
+/* section 3 ends here  */
+
+/* section 4 css  */
+.section-4-bg {
+    position: relative;
+    width: 100%;
+}
+
+.section-4-bg .bg-3 {
+    position: absolute;
+    right: 0px;
+    top: -100%;
+    z-index: -99;
+}
+
+.section-4 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.points {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 31px;
+
+}
+
+.points p {
+    color: #191A15;
+    font-weight: 500;
+}
+
+.section-4 h2 {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 700;
+    color: #191A15;
+    margin-bottom: 50px;
+    max-width: 429px;
+}
+
+.section-4 .right {
+    position: relative;
+}
+
+.section-4-ab-1 {
+    padding: 12px 13px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 138px;
+    position: absolute;
+    top: 120px;
+    right: -8%;
+}
+
+.section-4-ab-2 {
+    padding: 12px 13px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 304px;
+    position: absolute;
+    top: 36px;
+    left: -15%;
+}
+
+.section-4-ab-3 {
+    padding: 12px 13px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 302px;
+    position: absolute;
+    bottom: 0px;
+    left: -15%;
+}
+
+.p-3 {
+    font-size: 18px;
+    color: #191A15;
+    margin-left: 20px;
+}
+
+/* section 4 ends here  */
+
+/* section 5 css  */
+
+.section5-title {
+    text-align: center;
+    margin-bottom: 67px;
+}
+
+.section5-title h2 {
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 73px;
+    margin-bottom: 40px;
+}
+
+.section5-title p {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.section5-title .p-4 {
+    margin-bottom: 40px;
+}
+
+.btn-3 {
+    border: none;
+    background-color: transparent;
+    font-size: 18px;
+    font-weight: 500;
+    margin-right: 19px;
+}
+
+.btn-4 {
+    border: none;
+    background-color: #54BD95;
+    font-size: 18px;
+    color: #FFFFFF;
+    padding: 13px 40px;
+    border-radius: 10px;
+    font-weight: 500;
+    margin-left: 19px;
+}
+
+.section-5-details {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pricing {
+    text-align: center;
+}
+
+.pricing .p-6 {
+    margin-bottom: 13px;
+}
+
+.dollar {
+    position: relative;
+    display: inline;
+    margin-top: 13px;
+}
+
+.pricing .p-5 {
+    font-size: 50px;
+    font-weight: 700;
+    color: #191A15;
+}
+
+.dollar span {
+    position: absolute;
+    font-size: 18px;
+    color: #A9A7B6;
+    top: -10px;
+    left: -30px;
+}
+
+.padding {
+    padding: 40px 57px;
+}
+
+.includes {
+    margin-top: 56px;
+}
+
+.btn-include {
+    text-align: center;
+}
+
+.includes button {
+    font-size: 18px;
+    font-weight: 500;
+    color: #54BD95;
+    border: none;
+
+    background-color: transparent;
+}
+
+.col-hover-back {
+    background-color: #54BD95;
+    border-radius: 20px;
+    padding: 20px;
+    position: relative;
+}
+
+.col-hover-back .includes {
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    padding: 20px;
+    z-index: 1;
+}
+
+.col-hover-back .includes button {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 17px 80px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #FFFFFF;
+    background-color: #54BD95;
+    border: none;
+}
+
+.col-hover-back h3 {
+    color: #FFFFFF;
+}
+
+.col-hover-back p {
+    color: #FFFFFF;
+}
+
+.col-hover-back span {
+    color: #FFFFFF;
+}
+
+.col-hover-back .dollar p {
+    color: #FFFFFF;
+}
+
+.col-hover-back .points p {
+    color: #191A15;
+}
+
+.pricing-hov {
+    width: 100% !important;
+}
+
+.col-hover-back .bg-6 {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.detail-back {
+    background-color: #ffffff;
+    border-radius: 20px;
+}
+
+
+
+/* footer css  */
+
+footer {
+    background-color: #161C28;
+    padding-top: 130px;
+    padding-bottom: 40px;
+}
+
+.footer-section {
+    display: flex;
+    gap: 100px;
+
+}
+
+.footer-section .left {
+    flex-basis: 50%;
+}
+
+.footer-section .right {
+    flex-basis: 50%;
+    background-color: #222938;
+    border-radius: 20px;
+    color: #FFFFFF;
+    padding: 40px 86px 86px 66px;
+}
+
+.request {
+    text-align: center;
+}
+
+.footer-section .left h2 {
+    font-size: 50px;
+    color: #FFFFFF;
+    font-weight: 500;
+}
+
+form input,
+textarea {
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 17px;
+    margin: 10px 0;
+}
+
+form button {
+    padding: 20px 0;
+    background-color: #54BD95;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+
+}
+
+.free {
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px 0;
+}
+
+.free a {
+    color: #FFFFFF;
+}
+
+.one h2 {
+    margin-bottom: 20px;
+}
+
+.two {
+    margin: 40px 0;
+}
+
+.two .two-img {
+    margin-bottom: 20px;
+}
+
+.three {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-bottom {
+    margin-top: 170px;
+    display: flex;
+    gap: 160px;
+}
+
+.footer-bottom .left {
+    flex-basis: 40%;
+}
+
+.footer-bottom .right {
+    flex-basis: 60%;
+}
+
+.footer-bottom .left .p-7 {
+    margin: 30px 0;
+}
+
+.input {
+    position: relative;
+
+}
+
+.input input {
+    padding: 20px;
+    width: 100%;
+    border-radius: 30px;
+    background-color: transparent;
+    border: 1px solid #A6A6A6;
+    box-sizing: border-box;
+}
+
+.input .arrow {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+.footer-bottom .right{
+    display: flex;
+    justify-content: space-between;
+    gap: 64px;
+}
+.footer-menu h3 {
+    margin-bottom: 30px;
+    color: #FFFFFF;
+}
+
+.footer-bottom ul li {
+    margin-bottom: 20px;
+}
+
+.footer-menu ul li a {
+
+    color: #A6A6A6;
+}
+.footer-end{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+}
+.footer-end li{
+    display: inline-block;
+    margin-left: 20px;
+}
+.footer-end li a{
+    color: #FFFFFF;
+
+}
+.terms li{
+    list-style: url("assets/images/Ellipse 61.png");
+    color: #FFFFFF;
 }
